Closed Bug 445268 Opened 17 years ago Closed 17 years ago

gfxRect is used uninitialized in nsSVGFilterInstance::ComputeFilterPrimitiveSubregion

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

Attached patch fixSplinter Review
See attached patch.
Attachment #329606 - Flags: superreview?(mats.palmgren)
Attachment #329606 - Flags: review?(longsonr)
(Unlike nsRect, gfxRect doesn't initialize itself to zeroes).
Comment on attachment 329606 [details] [diff] [review] fix Add a space after each comma please.
Attachment #329606 - Flags: review?(longsonr) → review+
Attachment #329606 - Flags: superreview?(mats.palmgren) → superreview+
Pushed d0a71ca639ee. Dao, let me know if this does or does not fix the problem on Windows...
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Works as expected. I'm surprised that this wasn't caught by a reftest.
Great. Yeah, I'm surprised too since we do have drop-shadow reftests. Uninitialized data bugs are just too random.
Actually it's possible that the random failure of feGaussianBlur-3.html on Linux (which I disabled) was caused by this bug. I should try reenabling it.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: