Bug 445268. Initialize gfxRect to empty, it doesn't do it automatically. Should fix regression from bug 416305. r=longsonr,sr=mats